--- a/get-file-local-send-s3.ipynb
+++ b/get-file-local-send-s3.ipynb
@@ -29,26 +29,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from dotenv import load_dotenv\n",
-    "\n",
-    "load_dotenv()\n",
-    "\n",
-    "aws_access_key_id = os.getenv(\"aws_access_key_id_oficial\")\n",
-    "aws_secret_access_key = os.getenv(\"aws_secret_access_key_oficial\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#Conexão ao S3\n",
     "\n",
-    "s3_client = boto3.client(\"s3\",\n",
-    "aws_access_key_id = aws_access_key_id,\n",
-    "aws_secret_access_key= aws_secret_access_key)"
+    "s3_client = boto3.client(\"s3\")"
    ]
   },
   {
