--- a/iteiracao-with-aws.ipynb
+++ b/iteiracao-with-aws.ipynb
@@ -36,18 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ResponseMetadata': {'RequestId': 'M14MPXQ6FPRH6MED',\n",
-       "  'HostId': 'eKApK1xM8zzHT0xXrDQVsMgVpStHw84Npr9m6jZx96wH26I4fixgCGxx/P7skP1Boi6w1YOnRFI=',\n",
+       "{'ResponseMetadata': {'RequestId': 'KM8DS62YNXDKBRQY',\n",
+       "  'HostId': 'dRL2IfBTDRg7mz0AI5q2MkheUjZ9krlS9kda0TbJ6rFehcYgCDtAWaQeY6Fctfv6MeWq+kLdbR8=',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amz-id-2': 'eKApK1xM8zzHT0xXrDQVsMgVpStHw84Npr9m6jZx96wH26I4fixgCGxx/P7skP1Boi6w1YOnRFI=',\n",
-       "   'x-amz-request-id': 'M14MPXQ6FPRH6MED',\n",
-       "   'date': 'Fri, 24 May 2024 21:48:26 GMT',\n",
+       "  'HTTPHeaders': {'x-amz-id-2': 'dRL2IfBTDRg7mz0AI5q2MkheUjZ9krlS9kda0TbJ6rFehcYgCDtAWaQeY6Fctfv6MeWq+kLdbR8=',\n",
+       "   'x-amz-request-id': 'KM8DS62YNXDKBRQY',\n",
+       "   'date': 'Sat, 25 May 2024 02:46:34 GMT',\n",
        "   'x-amz-server-side-encryption': 'AES256',\n",
        "   'etag': '\"3e9e21bfeb4b98ee196fca14bdb8e46d\"',\n",
        "   'server': 'AmazonS3',\n",
@@ -57,7 +57,7 @@
        " 'ServerSideEncryption': 'AES256'}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,6 +91,147 @@
    "outputs": [],
    "source": [
     "s3_client.upload_file('local_file.txt', bucket_name, 'remote_file.txt')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Delete objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ResponseMetadata': {'RequestId': 'QG9VB0E1Y80T4EWX',\n",
+       "  'HostId': 'MHryddYBSZbD5nI8T4mG5SsBEg+A/V0szCk1hFhcdTs/qcpOZBzJe664jXmWoft4m1NtcLufUw0=',\n",
+       "  'HTTPStatusCode': 204,\n",
+       "  'HTTPHeaders': {'x-amz-id-2': 'MHryddYBSZbD5nI8T4mG5SsBEg+A/V0szCk1hFhcdTs/qcpOZBzJe664jXmWoft4m1NtcLufUw0=',\n",
+       "   'x-amz-request-id': 'QG9VB0E1Y80T4EWX',\n",
+       "   'date': 'Sat, 25 May 2024 02:44:59 GMT',\n",
+       "   'server': 'AmazonS3'},\n",
+       "  'RetryAttempts': 0}}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import boto3\n",
+    "s3 = boto3.client('s3')\n",
+    "\n",
+    "# Nome do bucket e chave do objeto (nome do arquivo) a ser deletado\n",
+    "bucket_name = 'bucket-create-by-dev1'\n",
+    "file_name = 'tabela.csv'\n",
+    "\n",
+    "# Deletar o arquivo\n",
+    "s3.delete_object(Bucket=bucket_name, Key=file_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ler arquivo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import io\n",
+    "bucket_name = 'bucket-create-by-dev1'\n",
+    "file_name = 'tabela.csv'\n",
+    "\n",
+    "obj = s3_client.get_object(Bucket=bucket_name, Key=file_name)\n",
+    "df = pd.read_csv(io.BytesIO(obj['Body'].read()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>nome</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Alice</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Bob</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Charlie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>David</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Eve</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id     nome\n",
+       "0   1    Alice\n",
+       "1   2      Bob\n",
+       "2   3  Charlie\n",
+       "3   4    David\n",
+       "4   5      Eve"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
